--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+body{
+    overflow: hidden;
+}
 #canvas{
     margin: -38px auto 1rem;
     display: block;
@@ -12,7 +15,7 @@ p{
 
 .pendu_span{
     height: auto;
-    padding: 0.5rem;
+    padding: 0.2rem;
     border-bottom: 2px solid black;
     margin: 1rem 6px;
     font-size: 1.4rem;
@@ -53,4 +56,8 @@ td:hover{
     font-size: 1.5rem;
     font-weight: bold;
     display: none;
+}
+
+.clavier{
+    overflow-x: auto;
 }
